15/09/11 Julien Dutheil
* Merge function of SequenceWithAnnotation now also merges annotations properly.

17/06/11 Julien Dutheil
* Bug #39 solved.

09/06/11 -*- Version 2.0.2 -*-

08/06/11 Julien Dutheil
* Fixed several Maf iterators.

28/02/11 -*- Version 2.0.1 -*-

* Fixed debian packaging. 

07/02/11 -*- Version 2.0.0 -*-

19/11/10 Julien Dutheil
* Solved bug 0000016 (General comments not copied in containers).
* A few more code cleaning.

01/11/10 Julien Dutheil
* Solved bug 0000005 (Clustal parser).
* Added unit testing for sequence input format.
* Solved bug 0000004 (Remove gap sites in SiteContainer).

12/10/10 Benoît Nabholz
* Added yeast mitochondrial codon alphabet and genetic code.

20/09/10 Julien Dutheil
* Reorganization of the code for version 2.0.

06/09/10 Julien Dutheil
* Added support for masked sequences in SequenceWithAnnotationTools and MafParser.

05/09/10 Julien Dutheil
* First draft of CaseMaskedAlphabet, for dealing with repeat-masked sequences for instance.

21/07/10 Julien Dutheil
* Added method hasSequence(name) in SequenceContainer interface.

20/07/10 Julien Dutheil
* New Sequence interface design.
* Maf parser now reads quality scores if there are some.

19/07/10 Julien Dutheil
* New method isInit in CodonAlphabet.
* New method getCDS in SequenceTools.

28/04/10 Julien Dutheil
* New MAF genome alignment parser.

22/04/10 Sylvain Gaillard
* Break SequenceTools interface:
		- renamed invert -> getInvert
		- renamed complement -> getComplement
	now invert and complement methods deals with sequence ref
		- New method invertComplement

16/04/10 Julien Dutheil
* New Stockholm sequence format (output only).
* Refactoring of class ISequence2 => IAlignment + new interface OAlignment.

24/03/10 -*- Version 1.7.0 -*-

11/03/10 Julien Dutheil
* Nexus format now deals with lower case keywords.

17/12/09 Julien Dutheil
* Code cleaning for VectorSiteContainer
* New class CompressedVectorSiteContainer using less memory than