@@ -215,16 +215,29 @@ Sequence& SequenceTools::invertComplement(Sequence& seq) {
 
 /******************************************************************************/
 
-double SequenceTools::getPercentIdentity(const Sequence& seq1, const Sequence& seq2) throw (AlphabetMismatchException, SequenceNotAlignedException)
+double SequenceTools::getPercentIdentity(const Sequence& seq1, const Sequence& seq2, bool ignoreGaps) throw (AlphabetMismatchException, SequenceNotAlignedException)
 {
-	if(seq1.getAlphabet()->getAlphabetType() != seq2.getAlphabet()->getAlphabetType())
+	if (seq1.getAlphabet()->getAlphabetType() != seq2.getAlphabet()->getAlphabetType())
 		throw AlphabetMismatchException("SequenceTools::getPercentIdentity", seq1.getAlphabet(), seq2.getAlphabet());
-	if(seq1.size() != seq2.size())
+	if (seq1.size() != seq2.size())
 		throw SequenceNotAlignedException("SequenceTools::getPercentIdentity", &seq2);
-	int id = 0;
-	for(unsigned int i = 0; i < seq1.size(); i++)
-		if(seq1.getValue(i) == seq2.getValue(i)) id++;
-	return (double)id / (double)seq1.size() * 100.; 			
+  int gap = seq1.getAlphabet()->getGapCharacterCode();
+	unsigned int id = 0;
+	unsigned int tot = 0;
+	for (unsigned int i = 0; i < seq1.size(); i++) {
+    int x = seq1.getValue(i);
+    int y = seq2.getValue(i);
+    if (ignoreGaps) {
+      if (x != gap && y != gap) {
+        tot++;
+		    if (x == y) id++;
+      }
+    } else {
+      tot++;
+		  if (x == y) id++;
+    }
+  }
+	return static_cast<double>(id) / static_cast<double>(tot) * 100.; 			
 }
 
 /******************************************************************************/
